Tweak card design CSS

--- a/public/css/public.css
+++ b/public/css/public.css
@@ -37,3 +37,8 @@ footer p {
 }
 
 .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+
+.grid-bg {
+    background-size: 3px 3px;
+    background-image: radial-gradient(circle, #000000 1px, rgba(180, 180, 180, 0.5) 1px);
+} 
