--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,8 +1,6 @@
 
 // Fonts
-@import url("https://fonts.googleapis.com/css?family=Roboto");
-
-@import url("https://fonts.googleapis.com/css?family=Roboto+Mono");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,600");
 
 // Variables
 @import "variables";
