--- a/public/css/public.css
+++ b/public/css/public.css
@@ -69,3 +69,7 @@ h4 {
     color: #e6e9ed;
     background: #373B50;
 }
+
+body, button, h1, h2, h3, h4 {
+    font-family: 'Roboto', sans-serif;
+}
