Remove mono font and update timezone ref in footer

--- a/public/css/public.css
+++ b/public/css/public.css
@@ -1,32 +1,3 @@
-:root {
-    --jumbotron-padding-y: 3rem;
-}
-
-.jumbotron {
-    padding-top: var(--jumbotron-padding-y);
-    padding-bottom: var(--jumbotron-padding-y);
-    margin-bottom: 0;
-    background-color: #fff;
-}
-@media (min-width: 768px) {
-    .jumbotron {
-        padding-top: calc(var(--jumbotron-padding-y) * 2);
-        padding-bottom: calc(var(--jumbotron-padding-y) * 2);
-    }
-}
-
-.jumbotron p:last-child {
-    margin-bottom: 0;
-}
-
-.jumbotron-heading {
-    font-weight: 300;
-}
-
-.jumbotron .container {
-    max-width: 40rem;
-}
-
 footer {
     padding-top: 3rem;
     padding-bottom: 0;
@@ -62,7 +33,7 @@ h4 {
 }
 
 .mono {
-    font-family: 'Roboto Mono', monospace;
+    /* font-family: 'Roboto Mono', monospace; */
 }
 
 .dark-bg {
@@ -79,5 +50,5 @@ body {
 }
 
 .nav-item {
-    font-family: 'Roboto Mono', monospace;
+    /* font-family: 'Roboto Mono', monospace; */
 }
